--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 </head>
 
 <body>
-    <!-- <div class="full-height is-fullheight hero has-background">
-        <img alt="Fill Murray" class="hero-background is-transparent" src="./asset/family.jpg" />
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="title">
-                    Becoming McGuff
-                </h1>
-                <h3 class="subtitle">
-                    Why are are adopting
-                </h3>
-            </div>
-            <div class="container">
-                <img src="./asset/withBackground.svg" alt="logo" height="300" width="300" />
-            </div>
-        </div>
-    </div> -->
+  <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="EETrogAO"></script>
+  <nav id="top-navbar" class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <h1><i class="fas fa-baby fa-3x"></i>  Becoming McGuff</h1>
+      </a>
+  
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+  </nav>
+
     <div class="container">
         <div class="hero is-fullheight has-background">
             <img alt="Family" class="hero-background is-transparent family" src="./asset/family-crop.jpg" />
@@ -40,7 +40,7 @@
                   An Adoption Story
                 </h3>
                 <div class="block">
-                    <button class="button is-primary is-light is-rounded"><i class="fas fa-rainbow"> Donate</i></button>
+                    <a href="https://www.facebook.com/donate/585488439051766/"><button class="button is-info is-rounded"><i class="fas fa-baby fa-1x"> Donate Now</i> </button></a>
                 </div>
               </div>
             </div>
@@ -51,10 +51,103 @@
             <section class="section">
               <div class="container">
                 <div class="heading">
-                  <h1 class="title">How we got here</h1>
+                  <h1 class="title">Why Adoption?</h1>
                 </div>
                 <div class="content">
-                    <p>Some basic information about how we got here</p>
+                    <p>An amazing artist painted this picture of Christ holding our baby after we experinced a still birth.</p>
+                    <p>Tell our story here...</p>
+                </div>
+              </div>
+            </section>
+            <section class="section">
+              <div class="container">
+                <div class="heading">
+                  <h1 class="title">How can you help?</h1>
+                </div>
+                <div class="content">
+                    <p>Fundrasier content here...</p>
+                </div>
+                <div class="columns">
+                  <div class="column">
+                    <div class="card">
+                      <div class="card-content">
+                        <p id="card-title" class="title">
+                          Puzzle Pieces of my Heart
+                        </p>
+                        <p class="subtitle">
+                          <figure class="image is-4x6">
+                            <img src="./asset/puzzle.jpg">
+                          </figure>
+                        </p>
+                        <hr>
+                        <p>To particapate in this campaign donate atleast 10 dollars to our facebook fundraiser and I will put your name on the back of a puzzle piece! Our baby will forever know the names of those who helped. </p>
+                      </div>
+                      <footer class="card-footer">
+                        <p class="card-footer-item">
+                          <span>
+                            Buy a <a href="https://www.facebook.com/donate/585488439051766/">Piece <i class="fas fa-puzzle-piece fa-2x"></i></a>
+                          </span>
+                        </p>
+                        <p class="card-footer-item">
+                          <span>
+                            Share on <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Facebook <i class="fab fa-facebook fa-2x"></i></a>
+                          </span>
+                        </p>
+                      </footer>
+                    </div>
+                  </div>
+                  <div class="column">
+                    <div class="card">
+                      <div class="card-content">
+                        <p class="title">
+                          Get the T-Shirt
+                        </p>
+                        <p class="subtitle">
+                          <figure class="image is-4x6">
+                            <img src="./asset/puzzle.jpg">
+                          </figure>
+                        </p>
+                      </div>
+                      <footer class="card-footer">
+                        <p class="card-footer-item">
+                          <span>
+                            Buy a <a href="https://www.facebook.com/donate/585488439051766/">T-Shirt <i class="fas fa-tshirt fa-2x"></i></a>
+                          </span>
+                        </p>
+                        <p class="card-footer-item">
+                          <span>
+                            Share on <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Facebook <i class="fab fa-facebook fa-2x"></i></a>
+                          </span>
+                        </p>
+                      </footer>
+                    </div>
+                  </div>
+                  <div class="column">
+                    <div class="card">
+                      <div class="card-content">
+                        <p class="title">
+                          Or just donate $$
+                        </p>
+                        <p class="subtitle">
+                          <figure class="image is-4x6">
+                            <img src="./asset/puzzle.jpg">
+                          </figure>
+                        </p>
+                      </div>
+                      <footer class="card-footer">
+                        <p class="card-footer-item">
+                          <span>
+                            Donate <a href="https://www.facebook.com/donate/585488439051766/">Money <i class="fas fa-hand-holding-usd fa-2x"></i></a>
+                          </span>
+                        </p>
+                        <p class="card-footer-item">
+                          <span>
+                            Share on <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Facebook <i class="fab fa-facebook fa-2x"></i></a>
+                          </span>
+                        </p>
+                      </footer>
+                    </div>
+                  </div>
                 </div>
               </div>
             </section>
