add images with weak slider

--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Adoption Fundrasier</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Adoption Fundrasier</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="style.css" />
+  <script src="slideshow.js"></script>
 </head>
-
 <body>
   <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="EETrogAO"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"
+    nonce="EETrogAO"></script>
   <nav id="top-navbar" class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="https://bulma.io">
-        <h1><i class="fas fa-baby fa-3x"></i>  Becoming McGuff</h1>
+        <h1><i class="fas fa-baby fa-3x"></i> Becoming McGuff</h1>
       </a>
-  
+
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -28,132 +30,212 @@
     </div>
   </nav>
 
-    <div class="container">
-        <div class="hero is-fullheight has-background">
-            <img alt="Family" class="hero-background is-transparent family" src="./asset/family-crop.jpg" />
-            <div class="hero-body">
-              <div class="container">
-                <h1 class="title">
-                  Becoming McGuff
-                </h1>
-                <h3 class="subtitle">
-                  An Adoption Story
-                </h3>
-                <div class="block">
-                    <a href="https://www.facebook.com/donate/585488439051766/"><button class="button is-info is-rounded"><i class="fas fa-baby fa-1x"> Donate Now</i> </button></a>
-                </div>
-              </div>
-            </div>
-            <img src="./asset/withBackground.svg" alt="logo" height="100" width="300">
+  <div class="container">
+    <div class="hero is-fullheight has-background">
+      <img alt="Family" class="hero-background is-transparent family" src="./asset/family-crop.jpg" />
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Becoming McGuff
+          </h1>
+          <h3 class="subtitle">
+            An Adoption Story
+          </h3>
+          <div class="block">
+            <a href="https://www.facebook.com/donate/585488439051766/"><button class="button is-info is-rounded"><i
+                  class="fas fa-baby fa-1x"> Donate Now</i> </button></a>
           </div>
-
-          <body>
-            <section class="section">
-              <div class="container">
-                <div class="heading">
-                  <h1 class="title">Why Adoption?</h1>
-                </div>
-                <div class="content">
-                    <p>An amazing artist painted this picture of Christ holding our baby after we experinced a still birth.</p>
-                    <p>Tell our story here...</p>
-                </div>
-              </div>
-            </section>
-            <section class="section">
-              <div class="container">
-                <div class="heading">
-                  <h1 class="title">How can you help?</h1>
-                </div>
-                <div class="content">
-                    <p>Fundrasier content here...</p>
-                </div>
-                <div class="columns">
-                  <div class="column">
-                    <div class="card">
-                      <div class="card-content">
-                        <p id="card-title" class="title">
-                          Puzzle Pieces of my Heart
-                        </p>
-                        <p class="subtitle">
-                          <figure class="image is-4x6">
-                            <img src="./asset/puzzle.jpg">
-                          </figure>
-                        </p>
-                        <hr>
-                        <p>To particapate in this campaign donate atleast 10 dollars to our facebook fundraiser and I will put your name on the back of a puzzle piece! Our baby will forever know the names of those who helped. </p>
-                      </div>
-                      <footer class="card-footer">
-                        <p class="card-footer-item">
-                          <span>
-                            Buy a <a href="https://www.facebook.com/donate/585488439051766/">Piece <i class="fas fa-puzzle-piece fa-2x"></i></a>
-                          </span>
-                        </p>
-                        <p class="card-footer-item">
-                          <span>
-                            Share on <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Facebook <i class="fab fa-facebook fa-2x"></i></a>
-                          </span>
-                        </p>
-                      </footer>
-                    </div>
-                  </div>
-                  <div class="column">
-                    <div class="card">
-                      <div class="card-content">
-                        <p class="title">
-                          Get the T-Shirt
-                        </p>
-                        <p class="subtitle">
-                          <figure class="image is-4x6">
-                            <img src="./asset/puzzle.jpg">
-                          </figure>
-                        </p>
-                      </div>
-                      <footer class="card-footer">
-                        <p class="card-footer-item">
-                          <span>
-                            Buy a <a href="https://www.facebook.com/donate/585488439051766/">T-Shirt <i class="fas fa-tshirt fa-2x"></i></a>
-                          </span>
-                        </p>
-                        <p class="card-footer-item">
-                          <span>
-                            Share on <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Facebook <i class="fab fa-facebook fa-2x"></i></a>
-                          </span>
-                        </p>
-                      </footer>
-                    </div>
-                  </div>
-                  <div class="column">
-                    <div class="card">
-                      <div class="card-content">
-                        <p class="title">
-                          Or just donate $$
-                        </p>
-                        <p class="subtitle">
-                          <figure class="image is-4x6">
-                            <img src="./asset/puzzle.jpg">
-                          </figure>
-                        </p>
-                      </div>
-                      <footer class="card-footer">
-                        <p class="card-footer-item">
-                          <span>
-                            Donate <a href="https://www.facebook.com/donate/585488439051766/">Money <i class="fas fa-hand-holding-usd fa-2x"></i></a>
-                          </span>
-                        </p>
-                        <p class="card-footer-item">
-                          <span>
-                            Share on <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Facebook <i class="fab fa-facebook fa-2x"></i></a>
-                          </span>
-                        </p>
-                      </footer>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </body>
+        </div>
+      </div>
+      <img src="./asset/withBackground.svg" alt="logo" height="100" width="300">
     </div>
 
-</body>
+      <section class="section">
+        <div class="tile is-ancestor">
+          <div class="tile is-vertical is-8">
+            <div class="tile">
+              <div class="tile is-parent is-vertical">
+                <article class="tile is-child notification is-white">
+                  <figure class="image is-6by9">
+                    <img src="./asset/couple.jpg">
+                  </figure>
+                </article>
+              </div>
+              <div class="tile is-parent">
+                <article class="tile is-child notification is-white">
+                  <figure class="image is-6by9">
+                    <img src="./asset/couple2.jpg">
+                  </figure>
+                </article>
+              </div>
+            </div>
+          </div>
+          <div class="tile is-parent">
+            <article class="tile is-child notification is-light">
+              <div class="content">
+                <div class="content">
+                  <p>Matthew and I met in October of 2007 and married in March of 2008. So yeah it was a whirlwind. As fast as we fell in love and married we spent a lot of our courtship talking about our future children. We knew that we wanted to be parents. We would go over different scenarios of how we would handle this issue or that issue in parenthood. Looking back it make me laugh, but I also see how the Lord was preparing us for what was to come. </p> 
+                  
+                  We had Aubrey our first before our 1st anniversery. We were made to be parents together and I would not want it to be with anyone else! </p>
+                </div>
+              </div>
+              <figure class="image is-128x128">
+                <img class="is-rounded" src="./asset/couple3.jpg">
+              </figure>
+            </article>
+          </div>
+        </div>
+      </section>
 
+      <section class="section">
+        <div class="slider">
+  
+          <a href="#slide-1">1</a>
+          <a href="#slide-2">2</a>
+          <a href="#slide-3">3</a>
+          <a href="#slide-4">4</a>
+          <a href="#slide-5">5</a>
+        
+          <div class="slides">
+            <div id="slide-1">
+             <img src="./asset/kids1.jpg" alt="">
+            </div>
+            <div id="slide-2">
+              <img src="./asset/kids2.jpg" alt="">
+            </div>
+            <div id="slide-3">
+              <img src="./asset/kids3.jpg" alt="">
+            </div>
+            <div id="slide-4">
+              <img src="./asset/kids4.jpg" alt="">
+            </div>
+            <div id="slide-5">
+              <img src="./asset/kids5.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      <section class="section">
+        <div class="container">
+          <div class="heading">
+            <h1 class="title">How can you help?</h1>
+          </div>
+          <div class="content">
+            <p>Fundrasier content here...</p>
+          </div>
+          <div class="columns">
+            <div class="column">
+              <div class="card">
+                <div class="card-content">
+                  <p id="card-title" class="title">
+                    Puzzle Pieces of my Heart
+                  </p>
+                  <p class="subtitle">
+                  <figure class="image is-4x6">
+                    <img src="./asset/puzzle.jpg">
+                  </figure>
+                  </p>
+                  <hr>
+                  <p>To particapate in this campaign donate atleast 10 dollars to our facebook fundraiser and I will put
+                    your name on the back of a puzzle piece! Our baby will forever know the names of those who helped.
+                  </p>
+                </div>
+                <footer class="card-footer">
+                  <p class="card-footer-item">
+                    <span>
+                      Buy a <a href="https://www.facebook.com/donate/585488439051766/"> <i
+                          class="fas fa-puzzle-piece fa-2x"></i></a>
+                    </span>
+                  </p>
+                  <p class="card-footer-item">
+                    <span>
+                      Share on <a target="_blank"
+                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse"
+                        class="fb-xfbml-parse-ignore"> <i class="fab fa-facebook fa-2x"></i></a>
+                    </span>
+                  </p>
+                </footer>
+              </div>
+            </div>
+            <div class="column">
+              <div class="card">
+                <div class="card-content">
+                  <p id="card-title" class="title">
+                    Get the T-Shirt
+                  </p>
+                  <p class="subtitle">
+                  <figure class="image is-4x6">
+                    <img src="./asset/t-shirt-preview.jpg">
+                  </figure>
+                  </p>
+                  <hr>
+                  <p> Click the link below to buy these awesome shirts! Once you get it please take a picture with you
+                    in it with:</p> <br>
+                  <p><b>#Iliketolookforrainbows</b></p><br>
+                  <p>Lets spread the word!</p>
+                </div>
+                <footer class="card-footer">
+                  <p class="card-footer-item">
+                    <span>
+                      Buy a <a href="https://www.bonfire.com/becoming-mcguff-adoption-fundraiser/"> <i
+                          class="fas fa-tshirt fa-2x"></i></a>
+                    </span>
+                  </p>
+                  <p class="card-footer-item">
+                    <span>
+                      Share on <a target="_blank"
+                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse"
+                        class="fb-xfbml-parse-ignore"><i class="fab fa-facebook fa-2x"></i></a>
+                    </span>
+                  </p>
+                </footer>
+              </div>
+            </div>
+            <div class="column">
+              <div class="card">
+                <div class="card-content">
+                  <p id="card-title" class="title">
+                    Or just donate $$
+                  </p>
+                  <p class="subtitle">
+                  <figure class="image is-4x6">
+                    <img src="./asset/adoption-wordcloud.png">
+                  </figure>
+                  </p>
+                  <hr>
+                  <p>Anything that you can give is so appreciated. Every cent of the donations will be used for the fees
+                    associated with adoption. Thank you for helping us on one of the most important journeys of our
+                    lives! </p>
+                </div>
+                <footer class="card-footer">
+                  <p class="card-footer-item">
+                    <span>
+                      Donate <a href="https://www.facebook.com/donate/585488439051766/"><i
+                          class="fas fa-hand-holding-usd fa-2x"></i></a>
+                    </span>
+                  </p>
+                  <p class="card-footer-item">
+                    <span>
+                      Share on <a target="_blank"
+                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fdonate%2F585488439051766%2F&amp;src=sdkpreparse"
+                        class="fb-xfbml-parse-ignore"><i class="fab fa-facebook fa-2x"></i></a>
+                    </span>
+                  </p>
+                </footer>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
+  <script>
+  bulmaCarousel.attach('#carousel-demo', {
+    slidesToScroll: 1,
+    slidesToShow: 4
+  });
+  </script>
+</body>
 </html>
